# mnemosyne

./: .gitignore  CMakeLists.txt  COPYING  README.md
config/: FindGLPK.cmake
doc/: .gitignore  howto.tex  makefile
doc/fig/: common.tex  framework.tex
doc/sec/: memory.tex  methodology.tex  overview.tex  preface.tex  process.tex
examples/: CMakeLists.txt  README.mk
examples/batch/: CMakeLists.txt  Makefile.mnemosyne  config.cfg
examples/batch_init/: CMakeLists.txt  Makefile.mnemosyne  config.cfg
examples/compatibility/: CMakeLists.txt  Makefile.mnemosyne  array_info.yaml  cgraph_0.yaml  cgraph_1.yaml  config.cfg
examples/ctos/: CMakeLists.txt  config.cfg
examples/multiacc/: CMakeLists.txt  Makefile.mnemosyne  config_debayer.cfg  config_multiacc.cfg  config_sort.cfg  debayer_0_config.yaml  debayer_0_interface.yaml  debayer_cgraph.yaml  multiacc_config.yaml  sort_0_config.yaml  sort_0_interface.yaml  sort_cgraph.yaml
examples/stratus/: CMakeLists.txt  config.cfg
examples/vivado/: CMakeLists.txt  Makefile.mnemosyne  config.cfg
src/: CMakeLists.txt  mnemosyne.cpp
src/accelerator/: Array.cpp  Array.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Scenario.cpp  Scenario.hpp  UGraph.cpp  UGraph.hpp
src/allocation/: Allocation.cpp  Allocation.hpp  AreaHeuristic.cpp  AreaHeuristic.hpp  CMakeLists.txt  Functor.cpp  Functor.hpp
src/backend/: CMakeLists.txt  CtosipWriter.cpp  CtosipWriter.hpp  ExportWriter.cpp  ExportWriter.hpp  IpxactWriter.cpp  IpxactWriter.hpp  StratusipWriter.cpp  StratusipWriter.hpp  VerilogWriter.cpp  VerilogWriter.hpp  Writer.cpp  Writer.hpp
src/plm_controller/: Architecture.cpp  Architecture.hpp  CMakeLists.txt  Memory.cpp  Memory.hpp  PBlock.cpp  PBlock.hpp  Partition.cpp  Partition.hpp  Tag.cpp  Tag.hpp
src/rtl_architecture/: CMakeLists.txt  binary_operation.cpp  binary_operation.hpp  binary_value.cpp  binary_value.hpp  concat.cpp  concat.hpp  cond_operation.cpp  cond_operation.hpp  delay.cpp  delay.hpp  float_value.cpp  float_value.hpp  integer_value.cpp  integer_value.hpp  module_always.cpp  module_always.hpp  module_assign.cpp  module_assign.hpp  module_block.cpp  module_block.hpp  module_call.cpp  module_call.hpp  module_case.cpp  module_case.hpp  module_case_statement.cpp  module_case_statement.hpp  module_decl.cpp  module_decl.hpp  module_def.cpp  module_def.hpp  module_for_statement.cpp  module_for_statement.hpp  module_function.cpp  module_function.hpp  module_generate.cpp  module_generate.hpp  module_if_statement.cpp  module_if_statement.hpp  module_initial.cpp  (+47 more)
src/utils/: CMakeLists.txt  README  debug.hpp  shared_pointers.hpp  time_utils.hpp  utils.hpp
tech/: CMakeLists.txt
tech/saed32nm/: CMakeLists.txt  saed32nm_memlib.yaml  wrap_saed32_128x16.v  wrap_saed32_128x32.v  wrap_saed32_128x4.v  wrap_saed32_128x8.v  wrap_saed32_16x16.v  wrap_saed32_16x32.v  wrap_saed32_16x4.v  wrap_saed32_16x8.v  wrap_saed32_32x16.v  wrap_saed32_32x22.v  wrap_saed32_32x32.v  wrap_saed32_32x39.v  wrap_saed32_32x4.v  wrap_saed32_32x8.v  wrap_saed32_64x16.v  wrap_saed32_64x32.v  wrap_saed32_64x4.v  wrap_saed32_64x8.v
tech/stratixv/: CMakeLists.txt  M20K_1024x16.v  M20K_16384x1.v  M20K_2048x8.v  M20K_4096x4.v  M20K_512x32.v  M20K_8192x2.v  stratixv_memlib.yaml
tech/virtex7/: CMakeLists.txt  WRAP_RAMB16_S18_S18.v  WRAP_RAMB16_S1_S1.v  WRAP_RAMB16_S2_S2.v  WRAP_RAMB16_S36_S36.v  WRAP_RAMB16_S4_S4.v  WRAP_RAMB16_S9_S9.v  virtex7_memlib.yaml
