CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT ("Mnemosyne")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/config")

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(LibXML++ REQUIRED)
FIND_PACKAGE(GLPK REQUIRED)
SET(LIBS ${LIBS} ${LibXML++_LIBRARIES} )

SET(CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-std=c++0x -g -Wno-deprecated-declarations")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(tech)
