
CONFIGURE_FILE(Makefile.mnemosyne Makefile.mnemosyne)

INSTALL(FILES config.cfg DESTINATION examples/batch_init PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES bram.init DESTINATION examples/batch_init PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES ${CMAKE_BINARY_DIR}/examples/batch_init/Makefile.mnemosyne DESTINATION examples/batch_init PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
