
CONFIGURE_FILE(Makefile.mnemosyne Makefile.mnemosyne)

INSTALL(FILES cgraph_0.yaml DESTINATION examples/compatibility PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES cgraph_1.yaml DESTINATION examples/compatibility PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES config.cfg DESTINATION examples/compatibility PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES array_info.yaml DESTINATION examples/compatibility PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

INSTALL(FILES ${CMAKE_BINARY_DIR}/examples/compatibility/Makefile.mnemosyne DESTINATION examples/compatibility PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
