
CONFIGURE_FILE(Makefile.mnemosyne Makefile.mnemosyne)

INSTALL(FILES config_sort.cfg DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES sort_0_config.yaml DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES sort_cgraph.yaml DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES sort_0_interface.yaml DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

INSTALL(FILES config_debayer.cfg DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES debayer_0_config.yaml DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES debayer_cgraph.yaml DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES debayer_0_interface.yaml DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

INSTALL(FILES config_multiacc.cfg DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES multiacc_config.yaml DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

INSTALL(FILES ${CMAKE_BINARY_DIR}/examples/multiacc/Makefile.mnemosyne DESTINATION examples/multiacc PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
