CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/src/accelerator
${CMAKE_SOURCE_DIR}/src/plm_controller
${CMAKE_SOURCE_DIR}/src/utils
${CMAKE_SOURCE_DIR}/src/utils/yaml-cpp/include
${LibXML++_INCLUDE_DIRS}
${Boost_INCLUDE_DIR}
)

ADD_LIBRARY(
lib-rtl_architecture
binary_operation.cpp
binary_value.cpp
concat.cpp
module_assign.cpp
module_function.cpp
module_reg_array.cpp
operation.cpp
module_block.cpp
module_generate.cpp
module_repeat.cpp
partselect.cpp
module_call.cpp
module_if_statement.cpp
module_sens.cpp
pointer.cpp
cond_operation.cpp
module_case.cpp
module_initial.cpp
module_single_statement.cpp
rtl_identifier.cpp
delay.cpp
module_case_statement.cpp
module_instance.cpp
module_substitution.cpp
rtl_node.cpp
float_value.cpp
module_decl.cpp
module_param.cpp
module_wait.cpp
module_wire_array.cpp
string_value.cpp
integer_value.cpp
module_def.cpp
module_port.cpp
module_while_statement.cpp
unary_operation.cpp
module_always.cpp
module_for_statement.cpp
module_reg.cpp
module_wire.cpp
variable.cpp
rtl_comment.cpp
)
