CONFIGURE_FILE(saed32nm_memlib.yaml saed32nm_memlib.yaml)

INSTALL(FILES ${CMAKE_BINARY_DIR}/tech/saed32nm/saed32nm_memlib.yaml DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

INSTALL(FILES wrap_saed32_16x4.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_16x8.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_16x16.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_16x32.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_32x4.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_32x8.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_32x16.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_32x22.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_32x32.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_32x39.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_64x4.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_64x8.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_64x16.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_64x32.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_128x4.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_128x8.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_128x16.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES wrap_saed32_128x32.v DESTINATION share/tech/saed32nm PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

