CONFIGURE_FILE(stratixv_memlib.yaml stratixv_memlib.yaml)

INSTALL(FILES ${CMAKE_BINARY_DIR}/tech/stratixv/stratixv_memlib.yaml DESTINATION share/tech/stratixv PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

INSTALL(FILES M20K_1024x16.v DESTINATION share/tech/stratixv PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES M20K_16384x1.v DESTINATION share/tech/stratixv PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES M20K_8192x2.v DESTINATION share/tech/stratixv PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES M20K_512x32.v DESTINATION share/tech/stratixv PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES M20K_4096x4.v DESTINATION share/tech/stratixv PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
INSTALL(FILES M20K_2048x8.v DESTINATION share/tech/stratixv PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
